--- a/My_first_NW_with_my_data.ipynb
+++ b/My_first_NW_with_my_data.ipynb
@@ -2,17 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "### Скелет Нейросети\n",
     "import numpy\n",
+    "import scipy, scipy.ndimage\n",
+    "import imageio\n",
+    "import os\n",
     "import matplotlib.pyplot\n",
     "%matplotlib inline\n",
-    "import scipy\n",
-    "# scipy.ndimage for rotating image arrays\n",
-    "import scipy.ndimage\n",
+    "\n",
+    "\n",
     "\n",
     "# Определение класса нейронной сети\n",
     "class neuralNetwork:\n",
@@ -93,10 +95,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "### создаем нейросеть\n",
+    "\n",
     "# Количество входных, скрытых и выходных узлов\n",
     "input_nodes = 784\n",
     "hidden_nodes = 1000\n",
@@ -110,33 +115,31 @@
     "# загрузим в список тренировочный набор данных mnist\n",
     "\n",
     "# кол-во циклов тренировки (эпох)\n",
-    "epochs = 100\n",
+    "epochs = 50\n",
     "\n",
     "# Тренировка Нейронной сети\n",
     "for e in range(epochs):\n",
     "    for i in range(5):\n",
     "        for N in range(10):\n",
-    "            filepath = \"Madata100/\" + str(i)+\"/\"+str(i)+str(N)+\".png\"\n",
+    "\n",
+    "            filepath = \"Data_training/\" + str(i)+\"/\"+str(i)+str(N)+\".png\"\n",
     "            img_array = imageio.imread(filepath)\n",
     "            img_data = 255.0 - img_array.reshape(784)\n",
     "            inputs = (img_data / 255.0 * 0.99) + 0.01\n",
+    "\n",
     "            targets = numpy.zeros(output_nodes) + 0.01\n",
     "            targets[i] = 0.99\n",
     "\n",
     "\n",
     "            # дополнительные версии изображжения с поворотом +- 10 градусов\n",
-    "            #inputs_plusx_img = scipy.ndimage.interpolation.rotate(inputs.reshape(28,28), 10, cval=0.01, order=1, reshape=False)\n",
-    "            #inputs_minusx_img = scipy.ndimage.interpolation.rotate(inputs.reshape(28,28), -10, cval=0.01, order=1, reshape=False)\n",
+    "            inputs_plusx_img = scipy.ndimage.interpolation.rotate(inputs.reshape(28,28), 10, cval=0.01, order=1, reshape=False)\n",
+    "            inputs_minusx_img = scipy.ndimage.interpolation.rotate(inputs.reshape(28,28), -10, cval=0.01, order=1, reshape=False)\n",
     "\n",
     "\n",
     "            n.train(inputs, targets)\n",
-    "            #n.train(inputs_plusx_img.reshape(784), targets)\n",
-    "            #n.train(inputs_minusx_img.reshape(784), targets)\n",
-    "        \n",
-    "\n",
-    "\n",
-    "        \n",
-    "\n",
+    "            n.train(inputs_plusx_img.reshape(784), targets)\n",
+    "            n.train(inputs_minusx_img.reshape(784), targets)\n",
+    "    \n",
     "        pass\n",
     "pass\n",
     "\n"
@@ -144,41 +147,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 0\n",
-      "1 1\n",
-      "2 0\n",
-      "3 3\n",
-      "4 4\n",
-      "5 2\n",
-      "6 3\n",
-      "7 4\n",
-      "8 3\n",
-      "9 3\n",
-      "эффективность =  0.4\n"
+      "А А\n",
+      "А В\n",
+      "Б В\n",
+      "Б В\n",
+      "В В\n",
+      "В В\n",
+      "Г Г\n",
+      "Г Г\n",
+      "Д Д\n",
+      "Д Д\n",
+      "эффективность =  0.7\n"
      ]
     }
    ],
    "source": [
-    "k = 0\n",
-    "for i in range(10): \n",
-    "    filepath = \"Mydata10/\" + str(i) + \".png\"\n",
-    "    img_array = imageio.imread(filepath)\n",
+    "### проверяем нейросеть\n",
+    "\n",
+    "koff = 0 # Счетчик правильных ответов нейросети\n",
+    "Digits = ['А', 'Б','В','Г','Д']\n",
+    "\n",
+    "directory = 'Data_test/'\n",
+    "for filename in os.listdir(directory):\n",
+    "    img_array = imageio.imread(directory + filename)\n",
     "    img_data = 255.0 - img_array.reshape(784)\n",
     "    img_data = (img_data / 255.0 * 0.99) + 0.01\n",
     "    outputs = n.query(img_data)\n",
     "    label = numpy.argmax(outputs)\n",
-    "    print(i, label)\n",
-    "    if i == label:\n",
-    "        k += 1\n",
+    "    \n",
     "\n",
-    "print (\"эффективность = \", k / 10)"
+    "    if label == int(filename[0]):\n",
+    "        koff += 1\n",
+    "    \n",
+    "    print(Digits[int(filename[0])], Digits[label])\n",
+    "\n",
+    "print (\"эффективность = \", koff / 10)"
    ]
   }
  ],
